# daylily-cognito

./: .gitignore  AGENTS.md  AI_DIRECTIVE.md  CHANGELOG.md  CHANGELOG_2_0_0.md  IMPLEMENTATION_PLAN.md  MIGRATING_TO_2_0_0.md  README.md  activate  daycog_activate  daylily_cognito_env.yaml  environment.yml  pyproject.toml  replace.py
.github/workflows/: ci.yml
daylily_auth_cognito/: __init__.py  version.py
daylily_auth_cognito/admin/: __init__.py  app_clients.py  client.py  federation.py  passwords.py  pools.py  users.py
daylily_auth_cognito/browser/: __init__.py  google.py  oauth.py  session.py
daylily_auth_cognito/cli/: __init__.py  config.py  main.py  spec.py
daylily_auth_cognito/cli/plugins/: __init__.py  apps.py  config.py  google.py  pools.py  status.py  users.py
daylily_auth_cognito/policy/: __init__.py  email_domains.py
daylily_auth_cognito/runtime/: __init__.py  fastapi.py  jwks.py  tokens.py  verifier.py
daylily_cognito/: __init__.py  _app_client_update.py  auth.py  cli.py  config.py  domain_validator.py  google.py  jwks.py  m2m.py  oauth.py  spec.py  tokens.py  web_session.py
daylily_cognito/plugins/: core.py
docs/: README.md
scripts/: check_pre_commit_hooks.py
tests/: test_activation_metadata.py  test_admin_app_clients.py  test_admin_pools.py  test_admin_users.py  test_app_client_update.py  test_auth.py  test_browser_session_extra.py  test_cli.py  test_cli_more.py  test_cli_plugin_apps.py  test_cli_plugin_config.py  test_cli_plugin_google.py  test_cli_plugin_pools.py  test_cli_plugin_status.py  test_cli_plugin_users.py  test_cli_registry_v2.py  test_config.py  test_domain_validator.py  test_fastapi_dep.py  test_google.py  test_jwks.py  test_m2m.py  test_oauth_urls.py  test_package_init.py  test_runtime_verifier_extra.py  test_spec.py  test_tokens_extra.py  test_tokens_unverified.py  test_tokens_verified.py  test_web_session.py
tools/: check_module_coverage.py
